--- a/README
+++ b/README
@@ -1,7 +1,7 @@
         Linux kernel release 4.x <http://kernel.org/>
 
 These are the release notes for Linux version 4.  Read them carefully,
-as they tell you what this is all about, explain how to install the
+as they tell you what this is aow to install the
 kernel, and what to do if something goes wrong. 
 
 WHAT IS LINUX?
